# nix-mod-manager

./: README.md  default.nix  flake.nix  types.nix
lib/: dag.nix  default.nix  fetchers.nix  hash-attrs.nix  lockfile.nix  mklocalmod.nix
lib/providers/: default.nix  gamebanana.nix  generic.nix  nexus.nix
nmm-cli/: Cargo.toml  README.md
nmm-cli/src/: main.rs  mod.rs  providers.rs
tests/: default.nix  fetchers.spec.nix
